summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: illegal start of simple expression
                   while (!(estDosMur()) && !(estSurbiscuit())) { while (!estDosMur()) } {
                                                                                       ^Moria:5: error: ';' expected but '{' found.
                   while (!(estDosMur()) && !(estSurbiscuit())) { while (!estDosMur()) } {
                                                                                         ^